--- a/Index.Rmd
+++ b/Index.Rmd
@@ -23,3 +23,29 @@ library(tidyr)
 # Exportamos la data de Twitch, que es .csv
 twitch_data <- read.csv("twitch_streamers.csv")
 ```
+
+# Planteamiento de la Investigación
+
+## 1. Planteamiento del Problema
+
+Una de las plataformas de streaming más concurridas y famosas actualmente es Twitch, con su crecimiento exponencial ha traído a miles de streamers de todo el mundo. A su vez, mediante diferentes variables (Total de seguidores, promedio de views o el promedio total transmitido) se ven afectadas por factores como el idioma (región) o la categoría de sus videos (Just Chatting, IRL, juegos).
+
+El problema en nuestro estudio se centra en la falta de comparativa entre dos de las comunidades más importantes en Twitch, la angloparlante (Inglés) y la hispanohablante (Español), y es importante para llegar a conclusiones en el tema de popularidad, y visualizar el comportamiento de los oyentes identificar a los streamers, contenido y juegos más famosos y concurridos por región.
+
+## 2. Objetivo General
+
+Comparar el comportamiento de las categorías de contenido de los streamers de habla angoparlante (Inglés) y hispanohablante (Español), para determinar y diferenciar las preferencias y/o comportamientos de los oyentes.
+
+## 3. Objetivos Específicos
+
+1.  Limpiar el data frame .csv, inspeccionar las columnas para identificar los valores nulos o vacíos para garantizar unos resultados precisos y correctos.
+
+2.  Definir el top 5 de los streamers de habla angoparlante más populares en seguidores, views, dentro de las categorías de contenido más concurridas.
+
+3.  Definir el top 5 de los streamers de habla hispanohablante más populares en seguidores, views, dentro de las categorías de contenido más concurridas.
+
+# Marco Teórico 
+
+Este estudio está basado en Twitch, la plataforma de Streaming más concurrida en esta era a nivel mundial. Sus inicios en 2011 como una rama de Justin.tv,  para retransmitir contenido en vivo. Debido a la enorme popularidad de la sección de videojuegos en Justin.tv, decidieron crear Twitch.tv como una plataforma dedicada exclusivamente a los eSports y videojuegos, lanzándose oficialmente el 6 de junio de 2011.  La plataforma creció rapidamente, volviendose la más popular en la categoría de Videojuegos, con el tiempo, evolucionó a otras categorías, como Just Chatting, IRL (in real life, streams en la calle), conciertos, deportes. 
+
+En esta investigación, nos apoyamos en la Estadística Descriptiva para obtener los resumenes y tener los datos en orden. Con esto, podemos
